--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "scdl",
   "version": "1.0.0",
   "description": "A CLI for scdl-core",
-  "main": "./src/index.js",
+  "main": "./bin/index.js",
+  "bin": "./bin/index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ducktrshessami/scdl.git"
