--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
   "name": "scdl",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "A CLI for scdl-core",
   "main": "./lib/index.js",
-  "bin": {
-    "scdl": "./bin/index.js"
-  },
+  "bin": "./bin/index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ducktrshessami/scdl.git"
