--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "scdl",
-  "version": "1.1.7",
+  "version": "1.1.8",
   "description": "A CLI for scdl-core",
-  "main": "./lib/index.js",
-  "bin": "./bin/index.js",
+  "main": "lib/index.js",
+  "bin": "bin/index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ducktrshessami/scdl.git"
