--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "homepage": "https://github.com/ducktrshessami/scdl#readme",
   "dependencies": {
-    "scdl-core": "github:ducktrshessami/scdl-core",
+    "scdl-core": "ducktrshessami/scdl-core",
     "soundcloud-key-fetch": "^1.0.11"
   }
 }
