--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "homepage": "https://github.com/ducktrshessami/scdl#readme",
   "dependencies": {
+    "mime": "^3.0.0",
     "scdl-core": "ducktrshessami/scdl-core",
     "soundcloud-key-fetch": "^1.0.11"
   }
