--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "homepage": "https://github.com/ducktrshessami/scdl#readme",
   "dependencies": {
+    "filenamify": "^5.1.1",
     "mime": "^3.0.0",
     "scdl-core": "ducktrshessami/scdl-core#v2.0.0",
     "soundcloud-key-fetch": "^1.0.13"
