--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "scdl",
   "version": "2.0.3",
   "description": "A CLI for scdl-core",
+  "type": "module",
   "main": "lib/index.js",
   "bin": "bin/index.js",
   "repository": "git@github.com:ducktrshessami/scdl.git",
