--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   "author": "ducktrshessami",
   "license": "MIT",
   "dependencies": {
+    "@scdl/fetch-client": "ducktrshessami/scdl-fetch-client#v1.0.0",
     "mime": "^3.0.0",
     "sanitize-filename": "^1.6.3",
-    "scdl-core": "ducktrshessami/scdl-core#v2.1.3",
-    "soundcloud-key-fetch": "^1.0.13"
+    "scdl-core": "ducktrshessami/scdl-core#v2.1.5"
   }
 }
